@@ -126,6 +126,14 @@ you want to run several SMS daemons.
 
 Executes a program after receiving message.
 
+.TP
+.BI DebugService
+
+Debug level for a service. Generally 1 enables some basic information and 2
+enables logging of SQL queries for database backends.
+
+Default is 0, what should mean no extra information.
+
 .SS Database backends options
 
 Both MYSQL and PGSQL backends supports same options for configuring connection
