@@ -241,6 +241,12 @@ GSM_Error SMSD_ReadConfig(const char *filename, GSM_SMSDConfig *Config, bool use
 		if (uselog) WriteSMSDLog(Config, "PIN code is \"%s\"",Config->PINCode);
 	}
 
+	str = INI_GetValue(smsdcfgfile, "smsd", "debugservice", false);
+	if (str)
+		Config->debug_service = atoi(str);
+	else
+		Config->debug_service = 0;
+
 	str = INI_GetValue(smsdcfgfile, "smsd", "commtimeout", false);
 	if (str) Config->commtimeout=atoi(str); else Config->commtimeout = 1;
 	str = INI_GetValue(smsdcfgfile, "smsd", "deliveryreportdelay", false);
