@@ -33,6 +33,7 @@ ChangeLog
 [+] * SMSD can now write PID file.
 [+] * Added man pages for gammu-smsd(1), gammu-smsdrc(5) and gammurc(5).
 [+] * SMSD can now natively run as a Windows service (bug #451).
+[+] * SMSD backend services debugging can be now enabled by DebugService.
     
 20081219 - 1.22.1
 
